--- a/TravelCardOrderService/Views/Shared/_Layout.cshtml
+++ b/TravelCardOrderService/Views/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using TravelCardOrderService.Models
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -26,13 +32,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">TravelCardOrderService</a>
+                <a asp-area="" asp-controller="Orders" asp-action="GetByUser" class="navbar-brand">TravelCardOrderService</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser">My orders</a></li>
+                    <li><a asp-area="" asp-controller="Orders" asp-action="Create">Make order</a></li>
+                    @if (SignInManager.IsSignedIn(User))
+                    {
+                        @if (UserManager.GetRolesAsync(UserManager.GetUserAsync(User).Result).Result.Contains("Admin"))
+                        {
+                            <li><a asp-area="" asp-controller="Orders" asp-action="Index">All odrers</a></li>
+                        }
+                    }
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
