--- a/TravelCardOrderService/Views/Orders/Delete.cshtml
+++ b/TravelCardOrderService/Views/Orders/Delete.cshtml
@@ -12,10 +12,10 @@
             <div class="row">
                 <div class="row">
                     <div class="col-sm-1">
-                        <label asp-for="Name"></label>
+                        <label asp-for="UserName"></label>
                     </div>
                     <div class="col-sm-4">
-                        <input asp-for="Name" disabled class="form-control" />
+                        <input asp-for="UserName" disabled class="form-control" />
                     </div>
                 </div>
                 <div class="row">
@@ -120,7 +120,7 @@
         <br />
         <div class="form-group">
             <input type="submit" value="Delete" class="btn btn-sm btn-danger" />
-            <a asp-action="Index" class="btn btn-sm btn-success">Back to List</a>
+            <a asp-action="GetByUser" class="btn btn-sm btn-success">Back to List</a>
         </div>
     </div>
 </form>
