--- a/TravelCardOrderService/Views/Orders/Edit.cshtml
+++ b/TravelCardOrderService/Views/Orders/Edit.cshtml
@@ -14,10 +14,10 @@
             <div class="row">
                 <div class="row">
                     <div class="col-sm-1">
-                        <label asp-for="Name"></label>
+                        <label asp-for="UserName"></label>
                     </div>
                     <div class="col-sm-4">
-                        <input asp-for="Name" class="form-control" />
+                        <input asp-for="UserName" disabled class="form-control" />
                     </div>
                 </div>
                 <div class="row">
@@ -118,7 +118,6 @@
                 </div>
 
             </div>
-            <span asp-validation-for="Name" class="text-danger"></span>
             <span asp-validation-for="Mb" class="text-danger"></span>
             <span asp-validation-for="M46" class="text-danger"></span>
             <span asp-validation-for="M62" class="text-danger"></span>
@@ -135,7 +134,7 @@
         <br />
         <div class="form-group">
             <input type="submit" value="Update" class="btn btn-sm btn-primary" />
-            <a asp-action="Index" class="btn btn-sm btn-success">Back to List</a>
+            <a asp-action="GetByUser" class="btn btn-sm btn-success">Back to List</a>
         </div>
     </div>
 </form>
