--- a/TravelCardOrderService/Views/Shared/_Layout.cshtml
+++ b/TravelCardOrderService/Views/Shared/_Layout.cshtml
@@ -36,13 +36,43 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser">My orders</a></li>
+                    <li class="dropdown"><a asp-area="" data-toggle="dropdown" class="dropdown-toggle">My orders  </a>
+                        <ul class="dropdown-menu">
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="1">January</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="2">Fabruary</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="3">March</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="4">April</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="5">May</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="6">June</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="7">July</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="8">August</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="9">September</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="10">October</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="11">November</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="12">December</a></li>
+                        </ul>
+                    </li>
                     <li><a asp-area="" asp-controller="Orders" asp-action="Create">Make order</a></li>
                     @if (SignInManager.IsSignedIn(User))
                     {
                         @if (UserManager.GetRolesAsync(UserManager.GetUserAsync(User).Result).Result.Contains("Admin"))
                         {
-                            <li><a asp-area="" asp-controller="Orders" asp-action="Index">All odrers</a></li>
+                            <li class="dropdown"><a asp-area="" data-toggle="dropdown" class="dropdown-toggle">All odrers <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="1">January</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="2">Fabruary</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="3">March</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="4">April</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="5">May</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="6">June</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="7">July</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="8">August</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="9">September</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="10">October</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="11">November</a></li>
+                                    <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="12">December</a></li>
+                                </ul>
+                            </li>
                         }
                     }
                 </ul>
