--- a/TravelCardOrderService/Views/Shared/_Layout.cshtml
+++ b/TravelCardOrderService/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown"><a asp-area="" data-toggle="dropdown" class="dropdown-toggle">My orders  </a>
+                    <li class="dropdown"><a asp-area="" data-toggle="dropdown" class="dropdown-toggle">My orders <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="1">January</a></li>
                             <li><a asp-area="" asp-controller="Orders" asp-action="GetByUser" asp-route-year="2018" asp-route-month="2">Fabruary</a></li>
