--- a/TravelCardOrderService/Views/Orders/Details.cshtml
+++ b/TravelCardOrderService/Views/Orders/Details.cshtml
@@ -114,6 +114,22 @@
                         <input asp-for="MT62" disabled class="form-control" />
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <label asp-for="Amount"></label>
+                    </div>
+                    <div class="col-sm-1">
+                        <input asp-for="Amount" class="form-control" disabled />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <label asp-for="Cost"></label>
+                    </div>
+                    <div class="col-sm-1">
+                        <input asp-for="Cost" class="form-control" disabled />
+                    </div>
+                </div>
 
             </div>
         </div>
