--- a/TravelCardOrderService/Views/Orders/Edit.cshtml
+++ b/TravelCardOrderService/Views/Orders/Edit.cshtml
@@ -116,6 +116,22 @@
                         <input asp-for="MT62" class="form-control" />
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <label asp-for="Amount"></label>
+                    </div>
+                    <div class="col-sm-1">
+                        <input asp-for="Amount" class="form-control" disabled />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <label asp-for="Cost"></label>
+                    </div>
+                    <div class="col-sm-1">
+                        <input asp-for="Cost" class="form-control" disabled />
+                    </div>
+                </div>
 
             </div>
             <span asp-validation-for="Mb" class="text-danger"></span>
