--- a/TravelCardOrderService/Views/Orders/GetByUser.cshtml
+++ b/TravelCardOrderService/Views/Orders/GetByUser.cshtml
@@ -50,56 +50,68 @@
             <th>
                 @Html.DisplayNameFor(m => m.MT62)
             </th>
+            <th>
+                @Html.DisplayNameFor(m => m.Amount)
+            </th>
+            <th>
+                @Html.DisplayNameFor(m => m.Cost)
+            </th>
             <th></th>
         </tr>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(m => item.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.Mb)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.M46)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.M62)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.MAb)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.MA46)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.MA62)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.MTRb)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.MTR46)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.MTR62)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.MTb)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.MT46)
-                </td>
-                <td>
-                    @Html.DisplayFor(m => item.MT62)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="bnt btn-sm btn-success">Edit</a>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="bnt btn-sm btn-primary">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="bnt btn-sm btn-danger">Delete</a>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(m => item.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.Mb)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.M46)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.M62)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.MAb)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.MA46)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.MA62)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.MTRb)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.MTR46)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.MTR62)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.MTb)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.MT46)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.MT62)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.Amount)
+            </td>
+            <td>
+                @Html.DisplayFor(m => item.Cost)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="bnt btn-sm btn-success">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="bnt btn-sm btn-primary">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="bnt btn-sm btn-danger">Delete</a>
+            </td>
+        </tr>
 
         }
     </table>
