--- a/TravelCardOrderService/Views/Shared/_Layout.cshtml
+++ b/TravelCardOrderService/Views/Shared/_Layout.cshtml
@@ -73,6 +73,10 @@
                                     <li><a asp-area="" asp-controller="Orders" asp-action="Index" asp-route-year="2018" asp-route-month="12">December</a></li>
                                 </ul>
                             </li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="FormFinalOrder">Final order</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="">Send email</a></li>
+
+
                         }
                     }
                 </ul>
