send email + final order added

--- a/TravelCardOrderService/Views/Orders/Create.cshtml
+++ b/TravelCardOrderService/Views/Orders/Create.cshtml
@@ -54,40 +54,40 @@
                     </tr>
                     <tr>
                         <td>
-                            <input asp-for="Mb" class="form-control" value="0" />
+                            <input asp-for="Mb" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="M46" class="form-control" value="0" />
+                            <input asp-for="M46" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="M62" class="form-control" value="0" />
+                            <input asp-for="M62" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="MAb" class="form-control" value="0" />
+                            <input asp-for="MAb" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="MA46" class="form-control" value="0" />
+                            <input asp-for="MA46" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="MA62" class="form-control" value="0" />
+                            <input asp-for="MA62" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="MTRb" class="form-control" value="0" />
+                            <input asp-for="MTRb" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="MTR46" class="form-control" value="0" />
+                            <input asp-for="MTR46" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="MTR62" class="form-control" value="0" />
+                            <input asp-for="MTR62" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="MTb" class="form-control" value="0" />
+                            <input asp-for="MTb" type="number" min="0" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="MT46" id="MT46" class="form-control" value="0" />
+                            <input asp-for="MT46" type="number" min="0" id="MT46" class="form-control" value="0" />
                         </td>
                         <td>
-                            <input asp-for="MT62" class="form-control" value="0" />
+                            <input asp-for="MT62" type="number" min="0" class="form-control" value="0" />
                         </td>
                     </tr>
                 </table>
