--- a/TravelCardOrderService/Views/Orders/GetByUser.cshtml
+++ b/TravelCardOrderService/Views/Orders/GetByUser.cshtml
@@ -1,11 +1,14 @@
 ﻿@model IEnumerable<TravelCardOrderService.Models.Order>
+@using System.Globalization
 @{
     ViewData["Title"] = "My orders";
+    Order finalOrder = (Order)ViewData["finalOrder"];
 }
 
 <br />
 <h2>My orders</h2>
 <hr />
+<h3>@finalOrder.Date.ToString("MMMM", CultureInfo.InvariantCulture)</h3>
 
 
 <div class="form-border">
@@ -60,59 +63,74 @@
         </tr>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(m => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.Mb)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.M46)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.M62)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.MAb)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.MA46)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.MA62)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.MTRb)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.MTR46)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.MTR62)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.MTb)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.MT46)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.MT62)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.Amount)
-            </td>
-            <td>
-                @Html.DisplayFor(m => item.Cost)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="bnt btn-sm btn-success">Edit</a>
-                <a asp-action="Details" asp-route-id="@item.Id" class="bnt btn-sm btn-primary">Details</a>
-                <a asp-action="Delete" asp-route-id="@item.Id" class="bnt btn-sm btn-danger">Delete</a>
-            </td>
-        </tr>
-
+            <tr>
+                <td>
+                    @Html.DisplayFor(m => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.Mb)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.M46)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.M62)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.MAb)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.MA46)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.MA62)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.MTRb)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.MTR46)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.MTR62)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.MTb)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.MT46)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.MT62)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.Amount)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.Cost)
+                </td>
+            </tr>
         }
+        <tr>
+            <th>Total</th>
+            <th>@finalOrder.Mb</th>
+            <th>@finalOrder.M46</th>
+            <th>@finalOrder.M62</th>
+
+            <th>@finalOrder.MAb</th>
+            <th>@finalOrder.MA46</th>
+            <th>@finalOrder.MA62</th>
+
+            <th>@finalOrder.MTRb</th>
+            <th>@finalOrder.MTR46</th>
+            <th>@finalOrder.MTR62</th>
+
+            <th>@finalOrder.MTb</th>
+            <th>@finalOrder.MT46</th>
+            <th>@finalOrder.MT62</th>
+
+            <th>@finalOrder.Amount</th>
+            <th>@finalOrder.Cost</th>
+        </tr>
     </table>
 </div>
