--- a/TravelCardOrderService/Views/Shared/_Layout.cshtml
+++ b/TravelCardOrderService/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                                 </ul>
                             </li>
                             <li><a asp-area="" asp-controller="Orders" asp-action="FormFinalOrder">Final order</a></li>
-                            <li><a asp-area="" asp-controller="Orders" asp-action="">Send email</a></li>
+                            <li><a asp-area="" asp-controller="Orders" asp-action="SendEmail">Send email</a></li>
 
 
                         }
